--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "tailwind": "^4.0.0",
     "postcss": "^8",
     "sweetalert2": "^11.4.32",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3",
+    "validate": "^5.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
