--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "sweetalert2": "^11.4.32",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-date-picker": "^2.5.0",
+    "vue-router": "^4.0.3",
+    "vue3-datepicker": "^0.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
