--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
     "postcss": "^8",
