--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
+    "oh-vue-icons": "^1.0.0-rc3",
     "postcss": "^8",
     "sweetalert2": "^11.4.32",
     "tailwind": "^4.0.0",
