--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ocrv/vue-tailwind-pagination": "^0.0.4",
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.8.3",
     "postcss": "^8",
@@ -16,6 +15,7 @@
     "tailwind": "^4.0.0",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-awesome-paginate": "^1.0.23",
     "vue-date-picker": "^2.5.0",
     "vue-router": "^4.0.3",
     "vue3-datepicker": "^0.3.4"
